# loreline

./: .gitignore  .gitmodules  CNAME  README.md  build-cli.hxml  build-cpp-lib-linux.hxml  build-cpp-lib-mac.hxml  build-cpp-lib-windows.hxml  build-cpp-lib.hxml  build-cs.hxml  build-js.hxml  build-jvm.hxml  build-lua.hxml  build-python.hxml  build.hxml  haxe  haxe.cmd  haxelib  haxelib.cmd  haxelib.json  install  loreline-interpreter.md  loreline.n  neko  neko.cmd  package-lock.json  package.json  run  run.n  setup  tsconfig.json
.github/workflows/: build-loreline.yml
cli/loreline/: Cli.hx  CliMacros.hx  Colors.hx
cpp/include/: Loreline.h
cpp/test/: test_runner.cpp
cs/: Directory.Build.props  Loreline.csproj  Loreline.sln
cs/Loreline/: Fields.cs  Interpreter.cs  Loreline.cs  Node.cs  Script.cs
cs/TestRunner/: Program.cs  TestRunner.csproj
godot/: SConstruct  loreline.gdextension
godot/src/: loreline_interpreter.cpp  loreline_interpreter.h  loreline_js_bridge.h  loreline_js_utils.h  loreline_load_locale_result.h  loreline_options.cpp  loreline_options.h  loreline_parse_result.h  loreline_resource_loader.cpp  loreline_resource_loader.h  loreline_runtime.cpp  loreline_runtime.h  loreline_script.cpp  loreline_script.h  loreline_translations.h  register_types.cpp  register_types.h
js/: loreline.d.ts  loreline.js  test-runner.ts  test.js
jvm/test/: TestRunner.java
jvm/tools/: Relocator.java
language/: language-configuration.json  loreline.tmLanguage.json
lua/: test-runner.lua
lua/loreline/: init.lua
py/: pyproject.toml  test-runner.py
py/loreline/: __init__.py
sample/: CoffeeShop.lor  characters.lor
sample/LorelineUnity/: .gitignore
sample/loreline-cpp/: .gitignore  CMakeLists.txt  build-linux.sh  build-mac.sh  build-windows.bat  main.cpp
sample/loreline-godot/: .gitignore  export_presets.cfg  project.godot  run-headless-test.sh  run-web-test.sh  web-test-runner.js
sample/loreline-java/: .gitignore  LorelineStory.java  run.bat  run.sh
sample/loreline-lua/: .gitignore  main.lua
sample/loreline-python/: .gitignore  main.py
sample/loreline-sdl3/: .gitignore  CMakeLists.txt  build-android.sh  build-ios.sh  build-linux.sh  build-mac.sh  build-windows.bat  main.cpp  run-android.sh  run-ios.sh  run-linux.sh  run-mac.sh  run-windows.bat
sample/loreline-sdl3/android/: gradlew  settings.gradle
sample/loreline-sdl3/android/app/: CMakeLists.txt  build.gradle
sample/loreline-sdl3/android/app/src/main/: AndroidManifest.xml
sample/loreline-sdl3/android/app/src/main/java/app/loreline/sdl3sample/: LorelineActivity.java
sample/loreline-sdl3/ios/: Info.plist  LaunchScreen.storyboard
sample/loreline-sdl3/ios/loreline-sdl3.xcodeproj/: project.pbxproj
sample/loreline-sdl3/ios/loreline-sdl3.xcodeproj/project.xcworkspace/xcuserdata/jeremyfa.xcuserdatad/: UserInterfaceState.xcuserstate
sample/loreline-sdl3/ios/loreline-sdl3.xcodeproj/xcuserdata/jeremyfa.xcuserdatad/xcschemes/: xcschememanagement.plist
sample/loreline-unity/: .gitignore
sample/loreline-web/: .gitignore  index.html
src/loreline/: Arrays.hx  AstPrinter.hx  AstUtils.hx  Async.hx  CodeToHscript.hx  CodeToLorscript.hx  Equal.hx  Error.hx  Fields.hx  Functions.hx  HscriptInterp.hx  Imports.hx  Int64Map.hx  Interpreter.hx  Json.hx  JsonToAst.hx  Lens.hx  Lexer.hx  Linc.hx  Loreline.hx  Node.hx  Objects.hx  Parser.hx  Position.hx  Printer.hx  Quotes.hx  Random.hx  SaveData.hx  Script.hx  Timer.hx  Utf8.hx  WrappedError.hx  Yaml.hx
test/: Alternatives-Cycle.lor  Alternatives-InChoiceInsertions.lor  Alternatives-InIf.lor  Alternatives-Nested.lor  Alternatives-Once.lor  Alternatives-OnceSingle.lor  Alternatives-Pick.lor  Alternatives-Sequence.lor  Alternatives-Shuffle.lor  Alternatives-WithStateMutations.lor  Beats-EndMarker.lor  Beats-Nested.lor  Beats-RootLevel.lor  Beats-StartFromBeat.lor  Beats-SubroutineReturn.lor  Beats-SubroutineTransition.lor  Beats-Transitions.lor  Characters-Advanced.lor  Characters-InConditions.lor  Characters-InferredFromDialogueAtRoot.lor  Characters-MultipleProperties.lor  Characters-NameDisplay.lor  Characters-NameInterpolation.lor  Choices-AllDisabled.lor  Choices-BooleanConditions.lor  Choices-BooleanConditionsUnquoted.lor  Choices-ChoicesFunctions.lor  Choices-ConditionWithInterpolation.lor  Choices-ConditionalInsertion.lor  Choices-ConditionalInsertionBecomesFalse.lor  Choices-ConditionalInsertionBecomesTrue.lor  Choices-ConditionalInsertionFalse.lor  Choices-Convergence.lor  Choices-DeeplyNested.lor  Choices-Empty.lor  Choices-InlineConditionTransition.lor  Choices-InlineTransition.lor  Choices-InsertionsWithConditions.lor  Choices-InsertionsWithState.lor  Choices-MultipleInBeat.lor  (+193 more)
test-cli/Translate-AutoIdsInserts/: spec.yml
test-cli/Translate-ClearRemovesIds/: spec.yml
test-cli/Translate-CreateXliff/: spec.yml
test-cli/Translate-ErrorInvalidFormat/: spec.yml
test-cli/Translate-ErrorInvalidSource/: spec.yml
test-cli/Translate-ErrorMissingFile/: spec.yml
test-cli/Translate-ErrorMissingLang/: spec.yml
test-cli/Translate-EscapesCsv/: spec.yml
test-cli/Translate-EscapesLor/: spec.yml
test-cli/Translate-EscapesPo/: spec.yml
test-cli/Translate-EscapesTsv/: spec.yml
test-cli/Translate-IdempotentLor/: spec.yml
test-cli/Translate-LoadInvalidCsv/: spec.yml
test-cli/Translate-LoadInvalidLor/: spec.yml
test-cli/Translate-LoadInvalidPo/: spec.yml
test-cli/Translate-LoadInvalidXliff/: spec.yml
test-cli/Translate-MergePreservesTsv/: spec.yml
test-cli/Translate-MergePreservesXliff/: spec.yml
test-cli/Translate-MergeSourceUpdatedCsv/: spec.yml
test-cli/Translate-MergeSourceUpdatedPo/: spec.yml
test/imports/: greetings.fr.lor  greetings.lor  import-no-translation.lor  jumper.lor  left.lor  nested-a.fr.lor  nested-a.lor  nested-b.fr.lor  nested-b.lor  parent.lor  right.lor  shared-beat.lor  shared-characters.lor  shared-state.lor  shared.lor  sibling-of-helpers.lor  sibling-x.fr.lor  sibling-x.lor  sibling-y.lor  translated-characters.fr.lor  translated-characters.lor  translated-choices.fr.lor  translated-choices.lor  (+1 more)
(+225 files in other folders)
