[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "loreline"
version = "0.5.0"
description = "Loreline interactive fiction scripting language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://loreline.app"
Repository = "https://github.com/jeremyfa/loreline"
